# Bing-API

./: README.md
bingapi/: README.md  pyproject.toml
bingapi/src/api4bing/: __init__.py  cross_open.py  headers.py
bingapi/src/bingapi/: __init__.py  __main__.py
telegram_bot/: README.md  bot.py
